organizacion de ruta

--- a/index.html
+++ b/index.html
@@ -84,31 +84,31 @@
           <!-- aqui van las imagen del slider -->
 
           <div class="swiper-slide">
-            <img src="./img/slider/blackcover.jpg" alt="imagen" />
+            <img src="/img/slider/blackcover.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/chaisawMan.jpg" alt="imagen" />
+            <img src="/img/slider/chaisawMan.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/demonSlayer.jpg" alt="imagen" />
+            <img src="/img/slider/demonSlayer.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/fireforse.jpg" alt="imagen" />
+            <img src="/img/slider/fireforse.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/fireforse.jpg" alt="imagen" />
+            <img src="/img/slider/fireforse.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/jujutsuKaisen.jpg" alt="imagen" />
+            <img src="/img/slider/jujutsuKaisen.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/SPYxFAMILY.jpg" alt="imagen" />
+            <img src="/img/slider/SPYxFAMILY.jpg" alt="imagen" />
           </div>
           <!-- fin de las imagen del slider -->
         </div>
