organizacion de ruta 2

--- a/auth/recuperar-codigo.html
+++ b/auth/recuperar-codigo.html
@@ -21,6 +21,8 @@
         <!--*** -->
 
         <!-- css -->
+        <link rel="stylesheet" href="/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
+
         <link rel="stylesheet" href="/css/styless.css">
 
     </head>
