--- a/auth/login.html
+++ b/auth/login.html
@@ -21,6 +21,7 @@
         <!--*** -->
 
         <!-- css -->
+        <link rel="stylesheet" href="/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
         <link rel="stylesheet" href="/css/styless.css">
 
     </head>
