--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       </nav>
 
       <nav class="login__header">
-        <a href="/auth/login.html"
-          ><img class="resolucion__img" src="/img/logo.png" alt="login"
+        <a href="./auth/login.html"
+          ><img class="resolucion__img" src="./img/logo.png" alt="login"
         /></a>
       </nav>
     </header>
@@ -84,31 +84,31 @@
           <!-- aqui van las imagen del slider -->
 
           <div class="swiper-slide">
-            <img src="/img/slider/blackcover.jpg" alt="imagen" />
+            <img src="./img/slider/blackcover.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="/img/slider/chaisawMan.jpg" alt="imagen" />
+            <img src="./img/slider/chaisawMan.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="/img/slider/demonSlayer.jpg" alt="imagen" />
+            <img src="./img/slider/demonSlayer.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="/img/slider/fireforse.jpg" alt="imagen" />
+            <img src="./img/slider/fireforse.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="/img/slider/fireforse.jpg" alt="imagen" />
+            <img src="./img/slider/fireforse.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="/img/slider/jujutsuKaisen.jpg" alt="imagen" />
+            <img src="./img/slider/jujutsuKaisen.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="/img/slider/SPYxFAMILY.jpg" alt="imagen" />
+            <img src="./img/slider/SPYxFAMILY.jpg" alt="imagen" />
           </div>
           <!-- fin de las imagen del slider -->
         </div>
@@ -269,7 +269,7 @@
             <a href="/paginas/detalle.html">
               <img
                 class="card__header--img"
-                src="/img/img-manga/avatar.jpg"
+                src="./img/img-manga/avatar.jpg"
                 alt="manga-name"
               />
             </a>
@@ -301,7 +301,7 @@
           <div class="card__header">
             <img
               class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
+              src="./img/img-manga/avatar.jpg"
               alt="manga-name"
             />
           </div>
