--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
     <link
       rel="stylesheet"
-      href="./css/necolas.github.io_normalize.css_8.0.1_normalize.css"
+      href="css/necolas.github.io_normalize.css_8.0.1_normalize.css"
     />
-    <link rel="stylesheet" href="./css/styless.css" />
+    <link rel="stylesheet" href="css/styless.css" />
     <!-- css -->
   </head>
   <body>
@@ -63,8 +63,8 @@
       </nav>
 
       <nav class="login__header">
-        <a href="./auth/login.html"
-          ><img class="resolucion__img" src="./img/logo.png" alt="login"
+        <a href="auth/login.html"
+          ><img class="resolucion__img" src="img/logo.png" alt="login"
         /></a>
       </nav>
     </header>
@@ -84,31 +84,31 @@
           <!-- aqui van las imagen del slider -->
 
           <div class="swiper-slide">
-            <img src="./img/slider/blackcover.jpg" alt="imagen" />
+            <img src="img/slider/blackcover.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/chaisawMan.jpg" alt="imagen" />
+            <img src="img/slider/chaisawMan.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/demonSlayer.jpg" alt="imagen" />
+            <img src="img/slider/demonSlayer.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/fireforse.jpg" alt="imagen" />
+            <img src="img/slider/fireforse.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/fireforse.jpg" alt="imagen" />
+            <img src="img/slider/fireforse.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/jujutsuKaisen.jpg" alt="imagen" />
+            <img src="img/slider/jujutsuKaisen.jpg" alt="imagen" />
           </div>
 
           <div class="swiper-slide">
-            <img src="./img/slider/SPYxFAMILY.jpg" alt="imagen" />
+            <img src="img/slider/SPYxFAMILY.jpg" alt="imagen" />
           </div>
           <!-- fin de las imagen del slider -->
         </div>
@@ -131,7 +131,7 @@
           <div class="contenedor__imagen">
             <img
               class="resolucion__img-card"
-              src="./img/slider/blackcover.jpg"
+              src="img/slider/blackcover.jpg"
               alt="imagen"
             />
           </div>
@@ -150,7 +150,7 @@
           <div class="contenedor__imagen">
             <img
               class="resolucion__img-card"
-              src="./img/slider/fireforse.jpg"
+              src="img/slider/fireforse.jpg"
               alt="imagen"
             />
           </div>
@@ -169,7 +169,7 @@
           <div class="contenedor__imagen">
             <img
               class="resolucion__img-card"
-              src="./img/slider/chaisawMan.jpg"
+              src="img/slider/chaisawMan.jpg"
               alt="imagen"
             />
           </div>
@@ -188,7 +188,7 @@
           <div class="contenedor__imagen">
             <img
               class="resolucion__img-card"
-              src="./img/slider/demonSlayer.jpg"
+              src="img/slider/demonSlayer.jpg"
               alt="imagen"
             />
           </div>
@@ -207,7 +207,7 @@
           <div class="contenedor__imagen">
             <img
               class="resolucion__img-card"
-              src="./img/slider/SPYxFAMILY.jpg"
+              src="img/slider/SPYxFAMILY.jpg"
               alt="imagen"
             />
           </div>
@@ -226,7 +226,7 @@
           <div class="contenedor__imagen">
             <img
               class="resolucion__img-card"
-              src="./img/slider/fireforse.jpg"
+              src="img/slider/fireforse.jpg"
               alt="imagen"
             />
           </div>
@@ -269,7 +269,7 @@
             <a href="/paginas/detalle.html">
               <img
                 class="card__header--img"
-                src="./img/img-manga/avatar.jpg"
+                src="img/img-manga/avatar.jpg"
                 alt="manga-name"
               />
             </a>
@@ -301,7 +301,7 @@
           <div class="card__header">
             <img
               class="card__header--img"
-              src="./img/img-manga/avatar.jpg"
+              src="img/img-manga/avatar.jpg"
               alt="manga-name"
             />
           </div>
@@ -641,6 +641,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-    <script src="./js/funcionalidades.js" defer></script>
+    <script src="js/funcionalidades.js" defer></script>
   </body>
 </html>
