--- a/auth/login.html
+++ b/auth/login.html
@@ -21,14 +21,14 @@
         <!--*** -->
 
         <!-- css -->
-        <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
-        <link rel="stylesheet" href="css/styless.css">
+        <link rel="stylesheet" href="/css/necolas.github.io_normalize.css_8.0.1_normalize.css">
+        <link rel="stylesheet" href="/css/styless.css">
 
     </head>
     <body>
         <header>
             <div class="header__logo">
-                <img class="resolucion__img" src="img/logo.png" alt="ElALtar">
+                <img class="resolucion__img" src="/img/logo.png" alt="ElALtar">
             </div>
 
             <button id="abrirVentana" class="desplegar__menu"><i
@@ -43,15 +43,15 @@
             </nav>
 
             <nav class="login__header">
-                <a href="auth/login.html"><img class="resolucion__img"
-                        src="img/logo.png" alt="elAltar"></a>
+                <a href="/auth/login.html"><img class="resolucion__img"
+                        src="/img/logo.png" alt="elAltar"></a>
             </nav>
 
         </header>
         <!-- fin header -->
 
         <!-- textura -->
-        <img class="textura-img" src="img/fondo-header.png" alt="fondo">
+        <img class="textura-img" src="/img/fondo-header.png" alt="fondo">
 
         <main>
             <div class="parte__superior">
@@ -61,7 +61,7 @@
             <div class="subcontenedor__formulario">
 
                 <div class="imagen__superior__formulario">
-                    <img src="icon/personaje-solid.svg" alt="Tú">
+                    <img src="/icon/personaje-solid.svg" alt="Tú">
                 </div>
 
                 <form action="#" class="form__control">
