--- a/index.html
+++ b/index.html
@@ -265,349 +265,8 @@
         </form>
       </div>
 
-      <div class="contenedor__manga">
-        <article class="card">
-          <div class="card__header">
-            <a href="/paginas/detalle.html">
-              <img
-                class="card__header--img"
-                src="img/img-manga/avatar.jpg"
-                alt="manga-name"
-              />
-            </a>
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
+      <div id="mangas" class="contenedor__manga">
 
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
-
-        <article class="card">
-          <div class="card__header">
-            <img
-              class="card__header--img"
-              src="/img/img-manga/avatar.jpg"
-              alt="manga-name"
-            />
-          </div>
-          <h1 class="card__title card__text--light">
-            El representante de dios
-          </h1>
-          <div class="card__footer">
-            <div class="card__footer__contenido">
-              <div class="card__stats">
-                <p class="card__number">80K</p>
-                <p class="card__text card__text--light">Followers</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">803K</p>
-                <p class="card__text card__text--light">Likes</p>
-              </div>
-
-              <div class="card__stats">
-                <p class="card__number">1.4K</p>
-                <p class="card__text card__text--light">Photos</p>
-              </div>
-            </div>
-          </div>
-        </article>
       </div>
     </div>
 
@@ -660,6 +319,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/funcionalidades.js" defer></script>
-    <script src="./js/main.js"></script>
+    <script src="js/Jinkan.js" defer></script>
   </body>
 </html>
